--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "bull": "^4.16.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.3",
     "logger": "^0.0.1",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1",
