--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,7 +19,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
+    "lodash": "^4.17.21",
     "logger": "^0.0.1",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1",
