--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "logger": "^0.0.1",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "sharp": "^0.34.5",
     "slug": "^11.0.1",
+    "uuid": "^13.0.0",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0"
   },
